--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# ============================================================================
+#                     Files used during testing and development
+# ============================================================================
+
+*.csv
+*.pdf
